chore: Fix linters